--- a/aboutme/package.json
+++ b/aboutme/package.json
@@ -11,13 +11,15 @@
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-pdf": "5.7.2",
+    "react-dom": "^18.2.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
