--- a/aboutme/package.json
+++ b/aboutme/package.json
@@ -16,8 +16,16 @@
     "react-dom": "^18.2.0",
     "react-pdf": "5.7.2",
     "react-router-dom": "6.3.0",
-    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "6.3.1",
+    "react-scripts": "^5.0.1"
+  },
+  "overrides": {
+    "react": "^18.2.0",
+    "@svgr/webpack": "$@svgr/webpack",
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "predeploy": "npm run build",
