--- a/aboutme/package.json
+++ b/aboutme/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.2.0",
     "react-pdf": "5.7.2",
     "react-router-dom": "6.3.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "styled-components": "5.3.1"
   },
   "devDependencies": {
     "@svgr/webpack": "6.3.1",
