--- a/aboutme/package.json
+++ b/aboutme/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-pdf": "5.7.2",
     "react-router-dom": "6.3.0",
+    "react-scroll-motion": "^0.3.2",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
